@@ -2,6 +2,7 @@ package flash.text.engine;
 
 @:fakeEnum(String) extern enum LineJustification {
 	ALL_BUT_LAST;
+	ALL_BUT_MANDATORY_BREAK;
 	ALL_INCLUDING_LAST;
 	UNJUSTIFIED;
 }
