@@ -20,6 +20,8 @@
 	all : changed @:build behavior, now takes/returns a var with anonymous fields
 	all : added @:native support for enums
 	neko : changed the result of array-assign expression (was null)
+	flash9 : no longer auto create enums from SWF classes
+		(need explicit "enum" type patch)
 
 2011-01-30: 2.07
 	all : fixed completion support with --remap
